--- a/index.html
+++ b/index.html
@@ -1,12 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+
+    <link href="https://fonts.googleapis.com/css2?family=Epilogue:wght@400;800&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/animacao.css">
+    <title>Componete Trabalhos</title>
 </head>
+
 <body>
-    
+    <div class="page">
+        <header>
+            <p>recentes</p>
+            <h1>Trabalhos</h1>
+        </header>
+
+        <main>
+            <div class="card">
+                <img src="https://images.unsplash.com/photo-1526738549149-8e07eca6c147?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Nnx8ZWxlY3Ryb25pY3N8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60"
+                    alt="Imagem de computador, smartphone, em cima de uma mesa com cafe" />
+                <h2><span>Design</span> UI/UX</h2>
+            </div>
+
+            <div class="card">
+                <img src="https://images.unsplash.com/photo-1550009158-9ebf69173e03?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8OXx8ZWxlY3Ryb25pY3N8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60"
+                    alt="Teclado e um headphone junto a uma panta" />
+                <h2><span>Mobile</span> Meu App</h2>
+            </div>
+
+            <div class="card">
+                <img src="https://images.unsplash.com/photo-1498049794561-7780e7231661?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8ZWxlY3Ryb25pY3N8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60"
+                    alt="celular, relogio, fone de ouvido e um notbook em cima da mesa" />
+                <h2><span>Web Site</span> melkdev.tech</h2>
+            </div>
+        </main>
+    </div>
 </body>
+
 </html>
