Alteração de imagem e reorganiação da pagina

--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link href="https://fonts.googleapis.com/css2?family=Epilogue:wght@400;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Epilogue:wght@400;800&display=swap">
 
+    <link rel="stylesheet" href="css/responsividade.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/animacao.css">
+
     <title>Componete Trabalhos</title>
 </head>
 
@@ -30,13 +32,19 @@
             </div>
 
             <div class="card">
-                <img src="https://images.unsplash.com/photo-1550009158-9ebf69173e03?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8OXx8ZWxlY3Ryb25pY3N8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60"
-                    alt="Teclado e um headphone junto a uma panta" />
-                <h2><span>Mobile</span> Meu App</h2>
+                <img src="https://images.pexels.com/photos/356056/pexels-photo-356056.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+                    alt="Computador, celularesx tablet e uma xicara de café em cima de uma mesa de madeira" />
+                <h2><span>Web Site</span>With Love</h2>
             </div>
 
             <div class="card">
-                <img src="https://images.unsplash.com/photo-1498049794561-7780e7231661?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8ZWxlY3Ryb25pY3N8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60"
+                <img src="https://img.freepik.com/fotos-gratis/vista-superior-do-smartphone-com-teclado-e-carregador_23-2149404179.jpg?w=1380&t=st=1677500077~exp=1677500677~hmac=e9a53bba24f6458eaab5d6971d71aad6631617f37c6d7b04cbe4718785d0ac80"
+                    alt="celular, relogio, fone de ouvido e um notbook em cima da mesa" />
+                <h2><span>Mobile</span>For Smartphone</h2>
+            </div>
+
+            <div class="card">
+                <img src="https://img.freepik.com/fotos-gratis/vista-superior-do-conjunto-de-dispositivos-em-luz-de-neon-roxa-e-fundo-rosa-teclado-do-laptop-fones-de-ouvido-e-smartphone-com-tela-preta-copyspace-para-sua-publicidade-tecnologia-moderna-gadgets_155003-25550.jpg?w=1380&t=st=1677500236~exp=1677500836~hmac=7228d2ed50221864418c07468f657012d6e3a68e04790a2c3a1abccfdd981ec5"
                     alt="celular, relogio, fone de ouvido e um notbook em cima da mesa" />
                 <h2><span>Web Site</span> melkdev.tech</h2>
             </div>
